--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
               <heading>News</heading>
                 <div style="width:100%;overflow-y:scroll; height:230px;">
                 <ul>
+				  <li style="line-height:30px"><b>January 2026:</b> Our <a href="https://arxiv.org/pdf/2510.18798">WebSeer</a> paper about <b>Deeper Search Agents</b> is accepted by <b>ICLR 2026</b>!</li>
 				  <li style="line-height:30px"><b>December 2025:</b> Released <b>GLM-4.6V</b>, our newest open-source GLM-4.6V series model, including GLM-4.6V (106B-A12B) and GLM-4.6V-Flash (9B).</li>
 				  <li style="line-height:30px"><b>November 2025:</b> Our <a href="https://arxiv.org/pdf/2511.06805">MathSE</a> paper about <b>Multimodal Mathematical Reasoning</b> is accepted by <b>AAAI 2026</b>!</li>
 				  <li style="line-height:30px"><b>August 2025:</b> Released <b>GLM-4.5V</b>, an improved vision-language model across multiple benchmarks.</li>
@@ -173,7 +174,7 @@ and reasoning.</li>
 			  Lei Hou, 
 			  Juanzi Li
               <br>
-              <em>arXiv</em>, 2025
+              <em>ICLR 2026</em>
               <br>
               <a href="https://arxiv.org/pdf/2510.18798">paper</a>,
               <a href="https://github.com/99hgz/WebSeer">code</a>
