--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ and reasoning.</li>
               <a href="https://arxiv.org/pdf/2511.08195">paper</a>,
               <a href="https://github.com/zai-org/UI2Code_N">code</a>
               <p></p>
-              <p>UI2Code^N is a visual language foundation model trained through staged pretraining, fine-tuning, and reinforcement learning to achieve foundational improvements in multimodal coding, which unifies three key capabilities: UI-to-code generation , UI editing , and UI polishing.
+              <p>UI2Code^N is a visual language foundation model trained through staged pretraining, fine-tuning, and reinforcement learning to achieve foundational improvements in multimodal coding, which unifies three key capabilities: UI-to-code generation, UI editing, and UI polishing.
 			  </p>
             </td>
           </tr>
@@ -130,7 +130,7 @@ and reasoning.</li>
               <a href="https://arxiv.org/pdf/2511.06251">paper</a>,
 			  <a href="https://github.com/zheny2751-dotcom/WebVIA">code</a>
               <p></p>
-              <p>WebVIA is the first agentic framework for interactive and verifiable UI-to-Code generation. While prior vision-language models only produce static HTML/CSS layouts, WebVIA enables executable and interactive web interfaces. The framework consists of three modules: (1) WebVIA-Agent – navigates websites and captures multi-state UI screenshots. (2) WebVIA-UI2Code – generates functional HTML/CSS/JavaScript code with interactivity. (3) Validation Module – verifies whether the generated UI behaves as expected. WebVIA-Agent achieves more stable and accurate UI exploration than general-purpose agents (e.g., Gemini-2.5-Pro), and WebVIA-UI2Code significantly improves executable and interactive code generation across multiple benchmarks.</p>
+              <p>WebVIA is the first agentic framework for interactive and verifiable UI-to-Code generation. While prior vision-language models only produce static HTML/CSS layouts, WebVIA enables executable and interactive web interfaces. The framework consists of three modules: WebVIA-Agent, WebVIA-UI2Code, and Validation Module.</p>
             </td>
           </tr>
 		<tr>
