--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
                 I am a postdoctoral researcher in the Department of Computer Science and Technology, Tsinghua Univerisity, collaborated with  <a href="https://keg.cs.tsinghua.edu.cn/jietang/">Prof. Jie Tang</a>. Prior to that, I received my Ph.D. from the <a href="https://keg.cs.tsinghua.edu.cn/">Knowledge Engineering Group (KEG)</a>, Department of Computer Science and Technology of Tsinghua University, fortunately working with <a href="https://keg.cs.tsinghua.edu.cn/jietang/">Prof. Jie Tang</a>. I obtained my master and bachelor degree from <a href="https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a> and <a href="https://en.xidian.edu.cn/">Xidian University</a>, respectively.
               </p>
               <p>
-                My current research interests lie in <b>multimodal coding agent</b>, <b>specialized mathematical models</b>, <b>large language models</b>, <b>multi-modal large language models</b>, and <b>graph representation learning</b>.  If these areas align with your interests, I welcome you to reach out via email. I am always open to discussing potential collaborations and exploring new ideas together.
+                My research interests lie in <b>vision-language models</b>, <b>large language models</b>, and <b>graph representation learning</b>. Currently, I focus on multimodal coding agents and agentic reinforcement learning. I aim to build agentic systems that can reason, plan, and generate executable code cross modalities. 
               </p>
+			  <p>
+				If these areas align with your interests, I welcome you to reach out via email. I am always open to discussing potential collaborations and exploring new ideas together.
+			  </p>
               <p style="text-align:center">
                 <a href="mailto:yang-zhen@mail.tsinghua.edu.cn">Email: yang-zhen [at] mail.tsinghua.edu.cn</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=zPVItDgAAAAJ&hl=zh-en">Google Scholar</a> &nbsp/&nbsp
